--- a/src/flashcard.css
+++ b/src/flashcard.css
@@ -10,20 +10,22 @@
     font-family: sans-serif;
     padding: 0;
     margin: 0;
-    background-color: tomato;
+    background-color: #fff;
+    color: #5d6169;
   }
 
   /*title*/
-.title {
+h1 {
   font-size: 30px;
-  font-weight: 600;
+  font-weight: 900;
   text-align: center;
-  padding: 20px 0;
+  padding: 15px 0;
+  color: rgb(8, 8, 8);
 }
 
 /*flashcard form*/
 form {
-  background-color: grey;
+  background-color: #2e5caf;
   padding: 23px 7px;
   margin: 0;
   display: flex;
@@ -62,8 +64,9 @@ input:focus {
 
   
   .flashcards div {
-    border: 1px solid #e7e7e7;
-    background-color: #f7f7f7;
+    border: 1px solid hsl(0, 0%, 91%);
+    background-color: #2e5caf;
+    color: #fff;
     border-radius: 7px;
     aspect-ratio: 2 / 1;
     display: flex;
@@ -96,7 +99,7 @@ input:focus {
   
 .btn-delete { 
   border-radius: 10px;
-  padding: 6px 12px;
+  padding: 9px 12px 0 0;
   position: absolute;
   top: 0;
   right: 0;
