--- a/src/flashcard.css
+++ b/src/flashcard.css
@@ -59,10 +59,12 @@ input:focus {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 5px;
   }
 
-  
+  .flashcard-section {
+    margin: 16px 0;
+  }
   .flashcards div {
     border: 1px solid hsl(0, 0%, 91%);
     background-color: #2e5caf;
